syntax = "proto3";

import "base.proto";

package pb;
 
service Board {
    // 评论
    rpc ListFirstComments(CommListArgs) returns (CommentInfos) {} // 拉取对象的一级评论列表
    rpc ListChildComments(CommListArgs) returns (CommentInfos) {} // 拉取一级评论的二级评论列表
    rpc GetComment(CommGetArgs) returns (CommentInfo) {}          // 获取评论
    rpc NewComment(CommNewArgs) returns (CommentInfo) {}          // 创建评论
    rpc DelComment(CommDelArgs) returns (ReplyBaseInfo) {}        // 删除评论
    rpc LikeComment(CommLikeArgs) returns (ReplyBaseInfo) {}      // 对评论点赞
    rpc UnLikeComment(CommUnLikeArgs) returns (ReplyBaseInfo) {}  // 取消对评论点的赞

    // 点赞
    rpc ListLikes(LikeListArgs) returns (LikeInfos) {}  // 拉取对象的点赞列表
    rpc GetLike(LikeGetArgs) returns (LikeInfo) {}      // 获取点赞
    rpc NewLike(LikeNewArgs) returns (LikeInfo) {}      // 创建点赞
    rpc DelLike(LikeDelArgs) returns (ReplyBaseInfo) {} // 删除点赞

    // 对象的评论点赞汇总信息
    rpc GetsSummary(BoardSummaryArgs) returns (BoardSummaryInfos) {}
}

// 评论Request

message CommListArgs {
    string oid        = 1; // 对象id
    string cid        = 2; // 一级评论id
    string direct     = 3;
    string uid        = 4; // 请求用户的uid
    string page_token = 5;
}

message CommGetArgs {
    string id  = 1; // 评论id
    string oid = 2;
    string uid = 3;
}

message CommNewArgs {
    string oid          = 1;
    string cid          = 2; // 一级评论id
    int32  level        = 3;
    bool   is_repost    = 4;
    string content      = 5;
    string img_id       = 6;
    string img_ex       = 7;
    UserBaseInfo author = 8;
}

message CommDelArgs {
    string id  = 1;
    string oid = 2;
    string cid = 3;
    string uid = 4; // 请求用户的uid
}

message CommLikeArgs {
    string id  = 1; // 评论id
    string oid = 2; // 对象id
    string uid = 3; // 请求用户的uid
}

message CommUnLikeArgs {
    string id  = 1; // 评论id
    string oid = 2; // 对象id
    string uid = 3; // 请求用户的uid
}

message LikeListArgs {
    string oid        = 1; 
    string page_token = 2;
}

message LikeGetArgs {
    string oid = 1; // 对象id
    string uid = 2;
}

message LikeNewArgs {
    string oid           = 1; 
    UserBaseInfo author  = 2;
}

message LikeDelArgs {
    string oid = 1; // 对象id
    string uid = 2;
}

message BoardSummaryArgs {
    repeated string oids = 1;
}

// 评论Response

message CommentInfo {
    string id          = 1;
    string oid         = 2;
    string cid         = 3; // 一级评论id;
    int32  level       = 4;
    string content     = 5;
    string img_id      = 6;
    string img_ex      = 7;
    bool   is_repost   = 8;
    bool   is_liking   = 9;
    int32  likes_count = 10;
    int32  reply_count = 11;
    int64  created_at  = 12;

    UserBaseInfo         author = 13;
    repeated CommentInfo replys = 14;
}

message CommentInfos {
    repeated CommentInfo items = 1;
    string   page_token        = 2;
}

message LikeInfo {
    string        id     = 1;
    string        oid    = 2;
    UserBaseInfo  author = 3;
}

message LikeInfos {
    repeated LikeInfo items      = 1;
    string            page_token = 2;
}

message BoardSummaryInfo {
    string oid               = 1;
    int32  comms_total       = 2; //   总评论数
    int32  comms_first_total = 3; // 一级评论数
    int32  likes_total       = 4; //   总点赞数
    int32  repost_total      = 5; //   总转发数
}

message BoardSummaryInfos {
    repeated BoardSummaryInfo items = 1;
}
